<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightGrey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connection">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/logo"

            android:layout_width="110dp"
            android:layout_height="102dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"

            android:contentDescription="App logo"
            app:srcCompat="@mipmap/logo_green" />

        <TextView
            android:id="@+id/appName"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:gravity="center"

            android:text="@string/app_name"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/email"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="80dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:fontFamily="@font/century_gothic"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <EditText
            android:id="@+id/password"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@+id/email"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <CheckBox
            android:id="@+id/rememberMe"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"

            android:fontFamily="@font/century_gothic"
            android:gravity="center"
            android:text="@string/checkboxRememberMe"
            android:textColor="@color/green"
            android:button="@drawable/checkbox"
            android:padding="3dp"/>

        <Button
            android:id="@+id/btnConnection"
            android:onClick="connection"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rememberMe"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:background="@drawable/button_inverted"
            android:fontFamily="@font/century_gothic"
            android:text="@string/connection"
            android:textColor="@color/green" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:onClick="createAccount"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnConnection"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:background="@drawable/button_inverted"
            android:fontFamily="@font/century_gothic"
            android:text="@string/createAccount"
            android:textColor="@color/green" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>