<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    tools:context=".EditUserProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:fontFamily="@font/century_gothic" />

        <EditText
            android:id="@+id/email"
            android:visibility="gone"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:fontFamily="@font/century_gothic"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <EditText
            android:id="@+id/firstName"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:hint="@string/firstName"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <EditText
            android:id="@+id/lastName"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:hint="@string/name"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <EditText
            android:id="@+id/nickName"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:hint="@string/nickName"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <CheckBox
            android:id="@+id/changePassword"
            android:visibility="gone"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"

            android:fontFamily="@font/century_gothic"
            android:gravity="center"
            android:text="@string/changePassword"
            android:textColor="@color/green"
            android:button="@drawable/checkbox"
            android:padding="3dp"/>

        <EditText
            android:id="@+id/currentPassword"
            android:visibility="gone"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:hint="@string/currentPassword"
            android:inputType="textPassword"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <EditText
            android:id="@+id/password"
            android:visibility="gone"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <EditText
            android:id="@+id/confirmPassword"
            android:visibility="gone"

            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:gravity="center"

            android:hint="@string/confirmNewPassword"
            android:inputType="textPassword"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green"
            android:textColorHint="@color/darkGrey"
            android:background="@drawable/edittext"
            />

        <Button
            android:id="@+id/btnConfirm"
            android:onClick="confirm"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            android:background="@drawable/button_inverted"
            android:fontFamily="@font/century_gothic"
            android:textColor="@color/green" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>